styles.css
@import "modern-normalize";

/* -------------------------------------------------------- */
/* normalise browser default styling and set up custom properties */
:root {
    line-height: 1.5;

    --text-sm: 0.875rem;
    --text-base: 1rem;
    --text-lg: 1.25rem;
    --text-xl: 1.5rem;
    --text-2xl: 2rem;

    --font-normal: 400;
    --font-medium: 500;
    --font-semibold: 600;
    --font-bold: 700;

    --icon-small: 24px;
    --icon-medium: 32px;
    --icon-large: 48px;

    --main-color: #4386f1;
    --second-color: #ece761;
    --neutral-color: #ccd4d4;
}

h1, h2, h3, h4, h5, figure, p, ol, ul, body {
    margin: 0;
}

ol[role="list"], ul[role="list"] {
    list-style: none;
    padding-inline: 0;
}

h1, h2, h3, h4, h5, p, a {
    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
    font-size: inherit;
    font-weight: inherit;
}

img {
    display: block;
    max-inline-size: 100%;
}

/* -------------------------------------------------------- */
/* set up custom elements */
h1 {
    font-size: var(--text-2xl);
    font-weight: var(--font-bold);
}

h2 {
    font-size: var(--text-xl);
    font-weight: var(--font-bold);
}

h3 {
    font-size: var(--text-lg);
    font-weight: var(--font-bold);
}


/* -------------------------------------------------------- */
/* main page layout */
.page-layout {
    display: grid;
    grid-template-columns: 320px 1fr;
    grid-template-rows: auto 1fr;
    grid-template-areas: 
        "sidebar header"
        "sidebar main";
    min-height: 100vh;
}

.sidebar-section {
    grid-area: sidebar;
    background-color: var(--main-color);
    padding: 2rem 1.5rem;
    color: white;
}

.header-section {
    grid-area: header;
    background-color: white;
    padding: 1rem 2.5rem;
    position: relative;
    box-shadow: 0px 10px 19px 0px rgba(115,115,115,0.35);
}

.main-section {
    grid-area: main;
    background-color: var(--neutral-color);
}

/* -------------------------------------------------------- */
/* styling for sidebar components */
.sidebar-header {
    display: flex;
    gap: 8px;
}

.sidebar-section > .sidebar-header > .h1 {
    color: inherit;
}

.sidebar-icon {
    width: var(--icon-large);
    filter: brightness(0) invert(1);
}

.nav-item {
    display: flex;
    gap: 1.75rem;
    margin: 1.75rem 0.5rem;
    text-decoration: none;
    color: inherit;
}

.nav-item-group-start {
    margin-top: 4rem;
}

.nav-icon {
    width: var(--icon-medium);
    height: var(--icon-medium);
    filter: brightness(0) invert(1);
}

.nav-text {
    font-size: var(--text-lg);
    font-weight: var(--font-semibold);
}

/* -------------------------------------------------------- */
/* styling for header components */
.header-grid {
    display: grid;
    grid-template-rows: auto auto;
}

.header-grid > .grid-top-row {
    display: flex;
    gap: 2rem;
    margin: 1rem 0rem;
    align-items: center;
}

.header-grid > .grid-top-row > * {
    flex: 0 0 auto;
}

.header-grid > * > :last-child {
    display: flex;
    gap: 1.5rem;
    margin-right: 2.5rem;
}

.search-bar {
    display: flex;
    margin-right: auto;
    gap: 1rem;
}

.search-bar input[type=text] {
    border: none;
    border-radius: 16px;
    padding: 0.5rem 1rem;
    background-color: var(--neutral-color);
    min-width: 600px;
}

.header-icon {
    width: var(--icon-small);
}

.profile-icon-container {
    border-radius: 50%;
    border: none;
    height: 2.5rem;
    width: 2.5rem;
    overflow: hidden;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: center;
}

.profile-icon {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
}

.header-grid > .grid-bottom-row {
    display: flex;
    gap: 2rem;
    margin: 1rem 0rem;
    align-items: center;
}

.user-greeting {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: auto auto;
    grid-template-areas: 
            "profile-icon greeting"
            "profile-icon username";
    column-gap: 1rem;
    margin-right: auto;
    min-width: 600px;
}

.user-greeting > .profile-icon-container {
    grid-area: profile-icon;
    height: 4rem;
    width: 4rem;
}

.user-greeting > p {
    grid-area: greeting;
    font-weight: var(--font-semibold);
}

.user-greeting > h2 {
    grid-area: username;
}

.header-button {
    border: none;
    border-radius: 32px;
    padding: 0.75rem 2rem;
    background-color: var(--main-color);

    color: white;
    font-weight: var(--font-semibold);
    font-size: var(--text-base);
}

/* -------------------------------------------------------- */
/* styling for main section components */

